<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Location Marker</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_save">Save</string>
    <string name="unknown">unknown</string>
    <string name="latitude">Lat:</string>
    <string name="longitude">Long:</string>
    <string name="area1">Area1:</string>
    <string name="area2">Area2:</string>
    <string name="area3">Area3</string>

</resources>
