<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
    <item 
        android:id="@+id/action_refresh"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/action_refresh" />
    <item
        android:id="@+id/action_save"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_save" />

</menu>
