<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MarkerActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"/>
        <TextView 
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/unknown"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"/>
        <TextView 
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:text="@string/unknown"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/area1"/>
		<EditText 
		    android:id="@+id/area1"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text"/>
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/area2"/>
		<EditText 
		    android:id="@+id/area2"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text"/>
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/area3"/>
		<EditText 
		    android:id="@+id/area3"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text"/>
    </LinearLayout>
</LinearLayout>
